--- a/Styles/style.css
+++ b/Styles/style.css
@@ -4,8 +4,28 @@
     background-size: cover;            
     background-position: center;       
     background-repeat: no-repeat;     
-    background-attachment: fixed;     
+    /* //background-attachment: fixed;      */
   }
+
+
+ #Home-rentals{
+
+    background-image: url('https://plus.unsplash.com/premium_photo-1673643405538-de0f82933fcb?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-size: cover;            
+    background-position: center;       
+    background-repeat: no-repeat;     
+    /* //background-attachment: fixed;      */
+  }
+
+
+  .image-container img {
+    transition: transform 0.3s ease; /* Smooth transition */
+  }
+  
+  .image-container img:hover {
+    transform: scale(1.1); /* Zooms the image to 110% */
+  }
+  
 
 
  
